--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -3,11 +3,16 @@
 {% block title %}Edit Article{% endblock %}
 
 {% block body %}
-    <h1>Editer Article</h1>
+    <div class="titrenewarticle">
+        <h1>Editer Article</h1>
+    </div>
+    <div class="form-new">
+        {{ include('article/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+    </div>
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_article_index') }}">retourner à la liste</a>
+    <div class="txt-nouveau">
+        <a href="{{ path('app_article_index') }}">retourner à la liste</a>
+    </div>
 
     {{ include('article/_delete_form.html.twig') }}
 {% endblock %}
