--- a/templates/evennement/index.html.twig
+++ b/templates/evennement/index.html.twig
@@ -25,8 +25,8 @@
                 <td>{{ evennement.contenu }}</td>
                 <td>{{ evennement.date ? evennement.date|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_evennement_show', {'id': evennement.id}) }}">show</a>
-                    <a href="{{ path('app_evennement_edit', {'id': evennement.id}) }}">edit</a>
+                    <a href="{{ path('app_evennement_show', {'id': evennement.id}) }}">voir</a>
+                    <a href="{{ path('app_evennement_edit', {'id': evennement.id}) }}">éditer</a>
                 </td>
             </tr>
         {% else %}
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_evennement_new') }}">Create new</a>
+    <a href="{{ path('app_evennement_new') }}">Créer un nouveau</a>
 {% endblock %}
